--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,7 @@
 
         .container {
             max-width: 100%;
+            max-height: 20%;
             margin: 20px auto;
             background: var(--container-bg);
             padding: 20px;
@@ -103,8 +104,8 @@
         }
 
         .request-details {
-            width: 75%;
-            padding: 10px;
+            width: 80%;
+            height: 100%;
         }
 
         .request-item {
@@ -183,6 +184,7 @@
 
             .requests-list, .request-details {
                 width: 100%;
+                height: 100%;
             }
         }
     </style>
