--- a/templates/index.html
+++ b/templates/index.html
@@ -193,7 +193,8 @@
 <div class="header">
     <div class="refresh-controls">
         <button class="toggle-mode" onclick="toggleMode()">Dark Mode</button>
-        <img id="refreshIndicator" src="{{ url_for('static', filename='normal.gif') }}" alt="Status Indicator" style="height: 40px; max-width: 500px;">
+        <img id="refreshIndicator" src="{{ url_for('static', filename='normal.gif') }}" alt="Status Indicator"
+             style="height: 40px; max-width: 500px;">
         <button onclick="logout()">Logout</button>
     </div>
 </div>
